# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py  intent_router.py  keyboards.py  router.py
bot/handlers/commands/: __init__.py
bot/services/: __init__.py  api_client.py  llm_client.py
