[project]
name = "lms-telegram-bot"
version = "0.1.0"
description = "Telegram bot for LMS"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=20.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
